@@ -1,5 +1,6 @@
 package com.currency.price.parsers;
 
+import com.currency.price.model.Currency;
 import com.currency.price.parsers.strategy.StrategyParser;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
@@ -7,7 +8,6 @@ import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class NBMParser implements StrategyParser {
@@ -17,10 +17,10 @@ public class NBMParser implements StrategyParser {
 
         return document.select("Valute").stream()
                 .map(item -> Currency.builder()
-                        .name(item.getElementsByTag("Name").text())
+                        .currency(item.getElementsByTag("Name").text())
                         .buy(Double.parseDouble(item.getElementsByTag("Value").text()))
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
